--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
+UTI DO CELULAR 
 
+-Assistencia celular, Iphone & Android 
+-Apenas peças originais 
+-Funcionarios capacitados no serviço
+-Estamos atendendo desde 2010
+-Nossa principal Loja é localizada na Rua 7 de Setembro, 456, Inacio Martins paraná 
+-Mas temos várias lojas espalhadas pelo País 
+-Também vendemos celulares, Cabos, Capinhas etc...
+-Atendemos no Brasil inteiro, atendendo virtualmente 
