--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-UTI DO CELULAR 
+<h1>UTI DO CELULAR </h1>
 
--Assistencia celular, Iphone & Android 
--Apenas peças originais 
--Funcionarios capacitados no serviço
--Estamos atendendo desde 2010
--Nossa principal Loja é localizada na Rua 7 de Setembro, 456, Inacio Martins paraná 
--Mas temos várias lojas espalhadas pelo País 
--Também vendemos celulares, Cabos, Capinhas etc...
--Atendemos no Brasil inteiro, atendendo virtualmente 
+<p>-Assistencia celular, Iphone & Android </p>
+<p>-Apenas peças originais </p>
+<p>-Funcionarios capacitados no serviço</p>
+<p>-Estamos atendendo desde 2010</p>
+<p>-Nossa principal Loja é localizada na Rua 7 de Setembro, 456, Inacio Martins paraná </p>
+<p>-Mas temos várias lojas espalhadas pelo País </p>
+<p>-Também vendemos celulares, Cabos, Capinhas etc...</p>
+<p>-Atendemos no Brasil inteiro, atendendo virtualmente </p>
