--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
-<h1>UTI DO CELULAR </h1>
+<!DOCTYPE html>
 
-<p>-Assistencia celular, Iphone & Android </p>
-<p>-Apenas peças originais </p>
-<p>-Funcionarios capacitados no serviço</p>
-<p>-Estamos atendendo desde 2010</p>
-<p>-Nossa principal Loja é localizada na Rua 7 de Setembro, 456, Inacio Martins paraná </p>
-<p>-Mas temos várias lojas espalhadas pelo País </p>
-<p>-Também vendemos celulares, Cabos, Capinhas etc...</p>
-<p>-Atendemos no Brasil inteiro, atendendo virtualmente </p>
+<html>
+
+    <h1>UTI DO CELULAR </h1>
+
+    <p>-Assistencia celular, Iphone & Android </p>
+    <p>-Apenas peças originais </p>
+    <p>-Funcionarios capacitados no serviço</p>
+    <p>-Estamos atendendo desde 2010</p>
+    <p>-Nossa principal Loja é localizada na Rua 7 de Setembro, 456, Inacio Martins paraná </p>
+    <p>-Mas temos várias lojas espalhadas pelo País </p>
+    <p>-Também vendemos celulares, Cabos, Capinhas etc...</p>
+    <p>-Atendemos no Brasil inteiro, atendendo virtualmente </p>
+
+</html>
