--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="pt-br">
+    <meta charset="UTF-8">
+    
+    <title>UTI DO CELULAR </title>
 
     <h1>UTI DO CELULAR </h1>
 
