--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 
 <html lang="pt-br">
+  <head>
     <meta charset="UTF-8">
     
     <title>UTI DO CELULAR </title>
-
+  </head>
+<body>
     <h1>UTI DO CELULAR </h1>
 
     <p>-Assistencia celular, Iphone & Android </p>
@@ -15,5 +17,5 @@
     <p>-Mas temos várias lojas espalhadas pelo País </p>
     <p>-Também vendemos celulares, Cabos, Capinhas etc...</p>
     <p>-Atendemos no Brasil inteiro, atendendo virtualmente </p>
-
+</body>
 </html>
