--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     
     <title>UTI DO CELULAR </title>
-    <link rel="stylesheet" href="stele.css"
+    <link rel="stylesheet" href="style.css">
   </head>
 <body>
     <h1>UTI DO CELULAR </h1>
