--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>UTI DO CELULAR </h1>
 
-    <p>-Assistencia celular, Iphone & Android </p>
+    <p>-Assistencia celular, iPhone & Android </p>
     <p>-Apenas peças originais </p>
     <p>-Funcionarios capacitados no serviço</p>
     <p>-Estamos atendendo desde 2010</p>
