--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
 <body>
+    <img src="https://st2.depositphotos.com/1157310/9083/v/950/depositphotos_90834368-stock-illustration-mobile-repair-mascot.jpg"
+
     <h1>UTI DO CELULAR </h1>
 
     <p>-Assistencia celular, iPhone & Android </p>
