--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
   </head>
 <body>
-    <img src="https://st2.depositphotos.com/1157310/9083/v/950/depositphotos_90834368-stock-illustration-mobile-repair-mascot.jpg"
 
     <h1>UTI DO CELULAR </h1>
 
@@ -20,5 +19,10 @@
     <p>-Mas temos várias lojas espalhadas pelo País </p>
     <p>-Também vendemos celulares, Cabos, Capinhas etc...</p>
     <p>-Atendemos no Brasil inteiro, atendendo virtualmente </p>
+
+    <img src="https://st.depositphotos.com/3079665/4118/v/950/depositphotos_41180991-stock-illustration-smartphone-holding-a-screwdriver-and.jpg"
+    
+    
+
 </body>
 </html>
