--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p>-Também vendemos celulares, Cabos, Capinhas etc...</p>
     <p>-Atendemos no Brasil inteiro, atendendo virtualmente </p>
 
-    <img src="https://st.depositphotos.com/3079665/4118/v/950/depositphotos_41180991-stock-illustration-smartphone-holding-a-screwdriver-and.jpg"
+    <img id="celular" src="https://st.depositphotos.com/3079665/4118/v/950/depositphotos_41180991-stock-illustration-smartphone-holding-a-screwdriver-and.jpg"
     
     
 
