--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="beneficios">
       <h2>ENDEREÇO</h2>
         <ul>
-          <li class="itens">RUA 7 DE SETEMBRO, 756</li>
+          <li class="itens">RUA 7 DE SETEMBRO, N°756</li>
         </ul>
 
          <img id="celular" scr="https://st.depositphotos.com/3079665/4118/v/950/depositphotos_41180991-stock-illustration-smartphone-holding-a-screwdriver-and.jpg">
