--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li class="itens">RUA 7 DE SETEMBRO, N°756</li>
         </ul>
 
-         <img id="celular" scr="https://st.depositphotos.com/3079665/4118/v/950/depositphotos_41180991-stock-illustration-smartphone-holding-a-screwdriver-and.jpg">
+         <img id="celular1" scr="https://st.depositphotos.com/3079665/4118/v/950/depositphotos_41180991-stock-illustration-smartphone-holding-a-screwdriver-and.jpg">
     </div>
 
 </body>
