--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
     <img id="celular" src="https://st.depositphotos.com/3079665/4118/v/950/depositphotos_41180991-stock-illustration-smartphone-holding-a-screwdriver-and.jpg">
     
     <div class="beneficios">
-      <h2>ENDEREÇO</h2>
+      <h2>BENEFICIOS & ENDEREÇOS </h2>
         <ul>
           <li class="itens">RUA 7 DE SETEMBRO, N°756</li>
+          <li class="itens">MELHOR ATENDIMENTO</li>
+          <li class="itens">ENTREGA RÁPIDA PARA SEUS CLIENTES</li>
+          <li class="itens">SEGUIDORES TEM DESCONTO</li>
+          <li class="itens">GARANTIA DE ATÉ 4 MESES</li>
+          <li class="itens">APENAS PEÇAS ORIGINAIS</li>
+
         </ul>
 
          <img id="celular1" src="https://st.depositphotos.com/3079665/4118/v/950/depositphotos_41180991-stock-illustration-smartphone-holding-a-screwdriver-and.jpg">
