--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         </ul>
 
-         <img id="celular1" src="https://st.depositphotos.com/3079665/4118/v/950/depositphotos_41180991-stock-illustration-smartphone-holding-a-screwdriver-and.jpg">
+         <img id="celular1" src="download.jpeg">
     </div>
 
 </body>
