LULA LADRÃO ROUBOU MEU CORAÇÃO

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     
   <header>
-    
+
        <h1>UTI DO CELULAR</h1>
 
   </header> 
@@ -41,7 +41,7 @@
 
         </ul>
 
-         <img id="celular1" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.facebook.com%2Futidocelularjundiai%2F&psig=AOvVaw31uhI6hXuqlbpY-hf4OtPR&ust=1664890005428000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCOjet96UxPoCFQAAAAAdAAAAABAD">
+         <img id="celular1" src="https://st.depositphotos.com/3079665/4118/v/950/depositphotos_41180991-stock-illustration-smartphone-holding-a-screwdriver-and.jpg">
     </div>
 
 </body>
