--- a/produtos.html
+++ b/produtos.html
@@ -13,9 +13,9 @@
          
 
          <ul>
-          <LI> Página Inicial</LI>
-          <li> Produtos</li>
-          <li> Contatos</li>
+          <LI><a> Página Inicial</a></LI>
+          <li><a> Produtos</a></li>
+          <li><a> Contatos</a></li>
          </ul>
 
     </header>
