--- a/produtos.html
+++ b/produtos.html
@@ -13,9 +13,9 @@
          
 
          <ul>
-          <LI><a> Página Inicial</a></LI>
-          <li><a> Produtos</a></li>
-          <li><a> Contatos</a></li>
+          <LI><a href="index.html"> Página Inicial</a></LI>
+          <li><a href="profutos.html"> Produtos</a></li>
+          <li><a href="contato.html"> Contatos</a></li>
          </ul>
 
     </header>
