--- a/produtos.html
+++ b/produtos.html
@@ -11,13 +11,13 @@
     <header>
          <h1><img id="logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJdhuKZYSHvvW0-21QbmusQ-PLRguZjEuQA8koZQ44IiaocvM2ZMGEMCzSYNe87sampfo&usqp=CAU"</h1>
          
-
+       <nav>
          <ul>
           <LI><a href="index.html"> Página Inicial</a></LI>
           <li><a href="profutos.html"> Produtos</a></li>
           <li><a href="contato.html"> Contatos</a></li>
          </ul>
-
+       </nav>
     </header>
 
 
