--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         </ul>
 
-         <img id="celular1" src="https://st.depositphotos.com/3079665/4118/v/950/depositphotos_41180991-stock-illustration-smartphone-holding-a-screwdriver-and.jpg">
+         <img id="celular1" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTsXWAwqLWmDJ_2R0fz9__btqKGQxnkQSru35gXCqq1tq4bdj5i7sXzX-GP_vAlOoUb7xs&usqp=CAU">
     </div>
 
 </body>
