--- a/produtos.html
+++ b/produtos.html
@@ -13,7 +13,7 @@
          
        <nav>
          <ul>
-          <LI><a href="index.html"> Página Inicial</a></LI>
+          <li><a href="index.html"> Página Inicial</a></li>
           <li><a href="profutos.html"> Produtos</a></li>
           <li><a href="contato.html"> Contatos</a></li>
          </ul>
