--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         </ul>
 
-         <img id="celular1" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTsXWAwqLWmDJ_2R0fz9__btqKGQxnkQSru35gXCqq1tq4bdj5i7sXzX-GP_vAlOoUb7xs&usqp=CAU">
+         <img id="celular1" src="https://www.ung.br/sites/ung.br/files/fields/imagemTopo/noticias/2022/03/hands-1851218_1280.jpg">
     </div>
 
 </body>
