--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <p>-Funcionarios capacitados no serviço</p>
     <p>-Estamos atendendo desde 2010</p>
     <p>-Nossa principal Loja é localizada na Rua 7 de Setembro, 456, Inacio Martins paraná </p>
-    <p>-Mas temos várias lojas espalhadas pelo País </p>
+    <p>-Temos várias lojas espalhadas pelo País </p>
     <p>-Também vendemos celulares, Cabos, Capinhas etc...</p>
-    <p>-Atendemos no Brasil inteiro, atendendo virtualmente </p>
+    <p>-E atendemos virtualmente também.</p>
 
     <img id="celular" src="https://st.depositphotos.com/3079665/4118/v/950/depositphotos_41180991-stock-illustration-smartphone-holding-a-screwdriver-and.jpg">
     
