--- a/produtos.html
+++ b/produtos.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-         <h1><img id="logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJdhuKZYSHvvW0-21QbmusQ-PLRguZjEuQA8koZQ44IiaocvM2ZMGEMCzSYNe87sampfo&usqp=CAU"</h1>
+         <h1><img id="logo" src="https://thumbs.dreamstime.com/b/s%C3%ADmbolo-das-ferramentas-no-%C3%ADcone-do-telefone-celular-135561453.jpg"</h1>
          
        <nav>
          <ul>
