--- a/produtos.html
+++ b/produtos.html
@@ -4,7 +4,7 @@
 
     <meta charset="UTF-8">
     <title>Produtos - UTI DO CELULAR</title>
-    <link rel="stylesheety" href="reset.css">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet"  href="produtos.css">
 
 </head>
