--- a/produtos.html
+++ b/produtos.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+        <div class="caixa-nave">
          <h1><img id="logo" src="https://thumbs.dreamstime.com/b/s%C3%ADmbolo-das-ferramentas-no-%C3%ADcone-do-telefone-celular-135561453.jpg"</h1>
          
        <nav>
