--- a/produtos.html
+++ b/produtos.html
@@ -24,9 +24,27 @@
 
     <main>
       <ul>
-         <li>capinhas</li>
-         <li>celular</li>
-         <ul>troca de tela</ul>
+        <li>
+            <h2>Capinhas</h2>
+            <img src="" alt="">
+            <p></p>
+            <p></p>
+        </li>
+
+        <li>
+            <h2>Celular</h2>
+            <img src="" alt="">
+            <p></p>
+            <p></p>
+        </li>
+
+        <li>
+            <h2>Troca de tela</h2>
+            <img src="" alt="">
+            <p></p>
+            <p></p>
+        </li>
+      </ul>
       </ul>
     </main>
 
