--- a/produtos.html
+++ b/produtos.html
@@ -26,7 +26,7 @@
       <ul class="produtos">
         <li>
             <h2>Capinhas</h2>
-            <img class="item" src="https://http2.mlstatic.com/D_NQ_NP_918211-MLB43139957855_082020-O.jpg">
+            <img class="item" src="https://img.ibxk.com.br/2022/08/19/iphone-14-capinhas-19113213933115.jpg">
             <p>CAPINHAS DE VARIADAS CORES,TRANSPARENTES,</p>
             <p>ESTAMPADAS E PERSONALIZADAS.</p>
             <p><strong> PREÇOS APARTIR DE R$19,90</strong></p>
