--- a/produtos.html
+++ b/produtos.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="caixa-nave">
-         <h1><img id="logo" src="https://thumbs.dreamstime.com/b/s%C3%ADmbolo-das-ferramentas-no-%C3%ADcone-do-telefone-celular-135561453.jpg"</h1>
+         <h1><img id="logo" src="https://images.tcdn.com.br/img/img_prod/677766/moveis_para_montar_loja_de_acessorios_para_celular_6266125_1_e77140bd11126071b78a14db2547205a.jpg"</h1>
          
        <nav>
        <ul>
