--- a/produtos.html
+++ b/produtos.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="caixa-nave">
-         <h1><img id="logo" src="https://images.tcdn.com.br/img/img_prod/677766/moveis_para_montar_loja_de_acessorios_para_celular_6266125_1_e77140bd11126071b78a14db2547205a.jpg"</h1>
+         <h1><img id="logo" src="https://imagens.ebc.com.br/QT4Ah6-ZbS0_eD8IpPEkN-iULOQ=/1600x800/https://agenciabrasil.ebc.com.br/sites/default/files/thumbnails/image/uso_de_smartphone_e_celular050720211245.jpg?itok=FGmsv5_E"</h1>
          
        <nav>
        <ul>
