--- a/produtos.html
+++ b/produtos.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="caixa-nave">
-         <h1><img id="logo" src="https://imagens.ebc.com.br/QT4Ah6-ZbS0_eD8IpPEkN-iULOQ=/1600x800/https://agenciabrasil.ebc.com.br/sites/default/files/thumbnails/image/uso_de_smartphone_e_celular050720211245.jpg?itok=FGmsv5_E"</h1>
+         <h1><img id="logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQXC17c57FulXfIy2h6j6evVtpy9M2FXHgSYWIkuRaoRRAxAydnBYxa9b5oJUJ2KWPsHRE&usqp=CAU"</h1>
          
        <nav>
        <ul>
