--- a/produtos.html
+++ b/produtos.html
@@ -27,7 +27,7 @@
         <li>
             <h2>Capinhas</h2>
             <img class="item" src="https://img.ibxk.com.br/2022/08/19/iphone-14-capinhas-19113213933115.jpg">
-            <p>CAPINHAS DE VARIADAS CORES,TRANSPARENTES,</p>
+            <p>CAPINHAS DE VARIADAS CORES,TRANSPARENTES</p>
             <p>ESTAMPADAS E PERSONALIZADAS.</p>
             <p><strong> PREÇOS APARTIR DE R$19,90</strong></p>
         </li>
@@ -36,7 +36,7 @@
             <h2>Celular</h2>
             <img class="item" src="https://s2.glbimg.com/rjNYeYRMQ2hwtuhCCVbCQfnX8vc=/27x120:2659x1529/924x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2020/n/3/DSwViLQweJov8gAqAAsw/img-f8c7d70c7de8-1.jpeg">
             <p>CELULARES DE DIFERENTES MARCAS</p>
-            <p>IPHONE, MOTOROLA, LG, XIAMO E SAMSUNG</p>
+            <p>IPHONE, MOTOROLA, LG, XIAOMI E SAMSUNG</p>
             <p><strong>PREÇOS APARTIR DE R$1.299,90</strong></p>
             
         </li>
